@@ -24,13 +24,21 @@ with 'Specio::Constraint::Role::DoesType';
         my $self = shift;
         my $val  = shift;
 
-        return sprintf( <<'EOF', ($val) x 7, B::perlstring( $self->role ) );
+        return sprintf( <<'EOF', ($val) x 8, B::perlstring( $self->role ) );
 (
     (
-        Scalar::Util::blessed(%s) || ( !ref(%s)
+        Scalar::Util::blessed(%s) || (
+              !ref(%s)
             && defined(%s)
             && length(%s)
-            && ref( \%s ) ne 'GLOB' )
+            && %s !~ /\A
+                      \s*
+                      -?[0-9]+(?:\.[0-9]+)?
+                      (?:[Ee][\-+]?[0-9]+)?
+                      \s*
+                      \z/xs
+            && ref( \%s ) ne 'GLOB'
+        )
     )
         && %s->can('does')
         && %s->does(%s)
