@@ -24,7 +24,7 @@ with 'Specio::Constraint::Role::IsaType';
         my $self = shift;
         my $val  = shift;
 
-        return sprintf( <<'EOF', ($val) x 6, B::perlstring( $self->class ) );
+        return sprintf( <<'EOF', ($val) x 7, B::perlstring( $self->class ) );
 (
     (
         Scalar::Util::blessed(%s)
@@ -32,6 +32,12 @@ with 'Specio::Constraint::Role::IsaType';
                defined(%s)
             && !ref(%s)
             && length(%s)
+            && %s !~ /\A
+                      \s*
+                      -?[0-9]+(?:\.[0-9]+)?
+                      (?:[Ee][\-+]?[0-9]+)?
+                      \s*
+                      \z/xs
 
             # Passing a GLOB from (my $glob = *GLOB) gives us a very weird
             # scalar. It's not a ref and it has a length but trying to
